Adjustments to swagger spec, added Swagger UI view
